# tiny-ntfy-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-automerge.yml  release.yml  validate.yml
src/hippo_notify_mcp/: __init__.py  server.py
src/ntfy_mcp/: __init__.py  __main__.py  _version.py  server.py
src/tiny_ntfy_mcp/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_live_ntfy_e2e.py  test_mcp_server.py
