[project]
name = "tiny-ntfy-mcp"
version = "1.0.0"
description = "Tiny local MCP server for fast, low-impact notifications via ntfy."
authors = [
    { name = "teh-hippo", email = "490309+teh-hippo@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.26.0",
]

[project.scripts]
tiny-ntfy-mcp = "tiny_ntfy_mcp.__main__:main"
ntfy-mcp = "ntfy_mcp.__main__:main"
# Deprecated alias kept for backward compatibility.
hippo-notify-mcp = "hippo_notify_mcp.__main__:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--cov=ntfy_mcp", "--cov-report=term-missing"]
markers = [
    "live_ntfy: live E2E tests that publish to a real ntfy server (requires CI secrets).",
]

[tool.coverage.run]
branch = true
source = ["ntfy_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = ""
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.semantic_release.commit_parser_options]
patch_tags = ["fix", "perf", "build"]
other_allowed_tags = ["chore", "ci", "docs", "style", "refactor", "test"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.remote]
type = "github"
token = { env = "GITHUB_TOKEN" }
